[Artiqle] [Blog page] fixed large images overlaping on small screens #hotfix

--- a/styles/pages/blog.css
+++ b/styles/pages/blog.css
@@ -20,6 +20,7 @@
 
 .blog-page .post .wrapper {
   flex: 1;
+  max-width: -webkit-fill-available;
 }
 
 .blog-page .post .thumb-wrapper {
